force-app/main/default/objects/History_Product_Recipient__c/History_Product_Recipient__c.object-meta.xml
<CustomObject>
    <label>History Product Recipient</label>
    <nameField>
        <label>History Product Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History Product Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>