force-app/main/default/objects/History_Product_Recipient__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>History_Product_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>