force-app/main/default/objects/History_Product_Recipient__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>History Product Recipients</relationshipLabel>
    <relationshipName>History_Product_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>