force-app/main/default/objects/History_Product_Recipient__c/fields/History_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>History_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>History Order Product</label>
    <referenceTo>History_Order_Product__c</referenceTo>
    <relationshipLabel>History Product Recipients</relationshipLabel>
    <relationshipName>History_Product_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>