force-app/main/default/objects/History_Product_Recipient__c/fields/Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Market_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Project</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>History Product Recipients</relationshipLabel>
    <relationshipName>History_Product_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>