force-app/main/default/objects/History_Product_Recipient__c/fields/Split_Value__c.field-meta.xml
<CustomField>
    <fullName>Split_Value__c</fullName>
    <label>Split Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>